--- a/_welcome.sass
+++ b/_welcome.sass
@@ -1,5 +1,5 @@
 #welcome
-    
+    padding: 10rem 0
     background-color: #ffff
     background-image: url("assets/header-bg.jpg")
     background-repeat: no-repeat
@@ -7,3 +7,23 @@
     background-size: cover
     background-position: center center
     text-align: center
+    .textbox,.btn
+        color: #ffff
+    .textbox
+        padding: 100px 0
+        h1
+            font-size: 2.25rem
+            font-weight: 500
+            font-style: italic
+            line-height: 2.25rem
+            margin-bottom: 2rem
+        h2
+            font-size: 4.5rem
+            font-weight: 700
+            line-height: 4.5rem
+            margin-bottom: 4rem
+        .btn
+            font-size: 1.125rem
+            font-weight: 700
+            padding: 1.25rem 2.5rem
+            background-color: #ffc800
