--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body .imgbox img {
 }
 
 #welcome {
+  padding: 10rem 0;
   background-color: white;
   background-image: url("assets/header-bg.jpg");
   background-repeat: no-repeat;
@@ -14,4 +15,29 @@ body .imgbox img {
   background-size: cover;
   background-position: center center;
   text-align: center;
+}
+#welcome .textbox, #welcome .btn {
+  color: white;
+}
+#welcome .textbox {
+  padding: 100px 0;
+}
+#welcome .textbox h1 {
+  font-size: 2.25rem;
+  font-weight: 500;
+  font-style: italic;
+  line-height: 2.25rem;
+  margin-bottom: 2rem;
+}
+#welcome .textbox h2 {
+  font-size: 4.5rem;
+  font-weight: 700;
+  line-height: 4.5rem;
+  margin-bottom: 4rem;
+}
+#welcome .textbox .btn {
+  font-size: 1.125rem;
+  font-weight: 700;
+  padding: 1.25rem 2.5rem;
+  background-color: #ffc800;
 }/*# sourceMappingURL=style.css.map */
