--- a/_services.sass
+++ b/_services.sass
@@ -1,1 +1,33 @@
 #services
+    h1
+        font-size: 40px
+        font-weight: 700
+        line-height: 1.2
+        margin-bottom: 16px
+        text-align: center
+    h3
+        font-size: 16px
+        color: #6c757d
+        line-height: 1.2
+        text-align: center
+        font-style: italic
+        font-weight: 400
+        margin-bottom: 64px
+    .icon
+        margin: 0 145px
+        text-align: center
+        height: 128px
+        width: 128px
+        border-radius: 100px
+        background-color: #ffc800
+        i
+            color: #ffff
+            font-size: 60px
+    .textbox
+        h2
+            margin-top: 1rem
+            margin-bottom: 1rem
+            font-size: 
+            
+            
+            
