--- a/style.css
+++ b/style.css
@@ -40,4 +40,38 @@ body .imgbox img {
   font-weight: 700;
   padding: 1.25rem 2.5rem;
   background-color: #ffc800;
+}
+
+#services h1 {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.2;
+  margin-bottom: 16px;
+  text-align: center;
+}
+#services h3 {
+  font-size: 16px;
+  color: #6c757d;
+  line-height: 1.2;
+  text-align: center;
+  font-style: italic;
+  font-weight: 400;
+  margin-bottom: 64px;
+}
+#services .icon {
+  margin: 0 145px;
+  text-align: center;
+  height: 128px;
+  width: 128px;
+  border-radius: 100px;
+  background-color: #ffc800;
+}
+#services .icon i {
+  color: white;
+  font-size: 60px;
+}
+#services .textbox h2 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-size: 1.275rem;
 }/*# sourceMappingURL=style.css.map */
