--- a/_services.sass
+++ b/_services.sass
@@ -1,4 +1,5 @@
 #services
+    padding: 96px 0
     h1
         font-size: 40px
         font-weight: 700
@@ -6,7 +7,7 @@
         margin-bottom: 16px
         text-align: center
     h3
-        font-size: 16px
+        font-size: 18px
         color: #6c757d
         line-height: 1.2
         text-align: center
@@ -27,7 +28,11 @@
         h2
             margin-top: 1rem
             margin-bottom: 1rem
-            
-            
-            
+            font-weight: 700
+            font-size: 25px
+        h4
+            line-height: 1.75
+            color: #6c757d
+            font-size: 18px
+
             
