--- a/_portfolio.sass
+++ b/_portfolio.sass
@@ -17,8 +17,17 @@
         width: 410px
         height: 300px
     .textbox
+        padding-top: 40px
         text-align: center
         width: 410px
         height: 120px
         background-color: #ffff
         margin-bottom: 25px
+        h2
+            font-weight: 700
+            font-size: 24px
+        h5
+            padding-top: 10px
+            color: #6c757d
+            font-style: italic
+            font-size: 18px
