--- a/_about.sass
+++ b/_about.sass
@@ -1,5 +1,7 @@
 #about
+    padding: 96px 200px
     .imgbox
+        margin: 50px 40px
         width: 170px
         height: 170px
         border-radius: 50%
@@ -7,6 +9,10 @@
         vertical-align: middle
     h2,h4
         text-align: right
+    h5,h6
+        text-align: left
     .textbox
+        margin: 50px 20px
         width: 400px
-        margin: 
+    .txt
+        margin-left: 430px
