--- a/style.css
+++ b/style.css
@@ -127,15 +127,27 @@ body .imgbox img {
   font-size: 18px;
 }
 
+#about {
+  padding: 96px 200px;
+}
 #about .imgbox {
+  margin: 50px 40px;
   width: 170px;
   height: 170px;
   border-radius: 50%;
   overflow: hidden;
+  vertical-align: middle;
 }
 #about h2, #about h4 {
   text-align: right;
 }
+#about h5, #about h6 {
+  text-align: left;
+}
 #about .textbox {
+  margin: 50px 20px;
   width: 400px;
+}
+#about .txt {
+  margin-left: 430px;
 }/*# sourceMappingURL=style.css.map */
