--- a/_about.sass
+++ b/_about.sass
@@ -1,18 +1,46 @@
 #about
     padding: 96px 200px
     .imgbox
-        margin: 50px 40px
-        width: 170px
-        height: 170px
+        margin: 80px 40px
+        width: 150px
+        height: 150px
         border-radius: 50%
         overflow: hidden
-        vertical-align: middle
+        
+    h1
+        font-weight: 700
+        font-size: 40px
+        margin-bottom: 16px
     h2,h4
-        text-align: right
-    h5,h6
-        text-align: left
+        font-size: 24px
+        font-weight: 700
+        line-height: 1.2
+    h3
+        font-size: 18px
+        font-weight: 400
+        font-style: italic
+        color: #6c757d
+        margin-bottom: 64px
+    p
+        font-size: 18px
+        color: #6c757d
+        line-height: 1.75
     .textbox
-        margin: 50px 20px
+        margin: 60px 20px 0
         width: 400px
-    .txt
-        margin-left: 430px
+    .margSize
+        margin-left: 440px
+        
+    .circle
+        margin: 60px 0 0 15px
+        width: 150px
+        height: 150px
+        border-radius: 50%
+        background-color: #FFC800 
+        h6
+            text-align: center
+            width: 60px
+            color: #ffff
+            font-size: 20px
+            font-weight: 700
+            line-height: 1.2
