--- a/style.css
+++ b/style.css
@@ -131,23 +131,53 @@ body .imgbox img {
   padding: 96px 200px;
 }
 #about .imgbox {
-  margin: 50px 40px;
-  width: 170px;
-  height: 170px;
+  margin: 80px 40px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
   overflow: hidden;
-  vertical-align: middle;
+}
+#about h1 {
+  font-weight: 700;
+  font-size: 40px;
+  margin-bottom: 16px;
 }
 #about h2, #about h4 {
-  text-align: right;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1.2;
 }
-#about h5, #about h6 {
-  text-align: left;
+#about h3 {
+  font-size: 18px;
+  font-weight: 400;
+  font-style: italic;
+  color: #6c757d;
+  margin-bottom: 64px;
+}
+#about p {
+  font-size: 18px;
+  color: #6c757d;
+  line-height: 1.75;
 }
 #about .textbox {
-  margin: 50px 20px;
+  margin: 60px 20px 0;
   width: 400px;
 }
-#about .txt {
-  margin-left: 430px;
+#about .margSize {
+  margin-left: 440px;
+}
+#about .circle {
+  margin: 60px 0 0 15px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background-color: #FFC800;
+}
+#about .circle h6 {
+  text-align: center;
+  width: 60px;
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.2;
 }/*# sourceMappingURL=style.css.map */
