--- a/_about.sass
+++ b/_about.sass
@@ -1,4 +1,4 @@
-#about
+#about 
     padding: 96px 200px
     .imgbox
         margin: 80px 40px
@@ -32,7 +32,7 @@
         margin-left: 440px
         
     .circle
-        margin: 60px 0 0 15px
+        margin: 60px 0 0 0
         width: 150px
         height: 150px
         border-radius: 50%
