--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ body .imgbox img {
   margin-left: 440px;
 }
 #about .circle {
-  margin: 60px 0 0 15px;
+  margin: 60px 0 0 0;
   width: 150px;
   height: 150px;
   border-radius: 50%;
@@ -180,4 +180,16 @@ body .imgbox img {
   font-size: 20px;
   font-weight: 700;
   line-height: 1.2;
+}
+
+#team .icon {
+  display: flex;
+  flex-flow: row nowrap;
+}
+#team .icon i {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0);
+  margin: 0 8px;
 }/*# sourceMappingURL=style.css.map */
