--- a/_about.sass
+++ b/_about.sass
@@ -1,6 +1,7 @@
 #about 
     padding: 96px 200px
     .imgbox
+        border: 8px solid #dfdfe0
         margin: 80px 40px
         width: 150px
         height: 150px
@@ -32,6 +33,7 @@
         margin-left: 440px
         
     .circle
+        border: 8px solid #dfdfe0
         margin: 60px 0 0 0
         width: 150px
         height: 150px
