--- a/_header.sass
+++ b/_header.sass
@@ -5,10 +5,28 @@ header
     top: 0
     .imgbox
         width: 140px
-    nav
-        a
-            padding: 8px
-            font-size: 1rem
+
+    .navbar
+        nav
+            a
+                padding: 8px
+                font-size: 1rem
+                color: #ffff
+                margin-right: 25px
+                letter-spacing: 0.07rem
+@media (max-width: 950px)
+    .navbar
+        display: none
+    .menu-button
+        display: block
+        padding: 0.75rem
+        font-weight: 700
+        border: 0.0625rem solid #ffff
+        border-radius: 5px
+        h6
+            padding-right: 5px
             color: #ffff
-            margin-right: 25px
-            letter-spacing: 0.07rem
+            opacity: 0.65
+            font-size: 0.75rem
+        i
+            color: #ffff
