--- a/_portfolio.sass
+++ b/_portfolio.sass
@@ -15,12 +15,13 @@
             color: #6c757d
     .imgbox
         width: 410px
-        height: 300px
+        img
+            height: 300px
     .textbox
-        padding-top: 40px
+        padding-top: 20px
         text-align: center
         width: 410px
-        height: 120px
+        height: 108px
         background-color: #ffff
         margin-bottom: 25px
         h2
