--- a/_header.sass
+++ b/_header.sass
@@ -1,12 +1,16 @@
 header
     background-color: #212529
     padding: 18px 0
-    position: sticky
+    position: fixed
     top: 0
+    width: 100%
     .imgbox
         width: 140px
 
     .navbar
+        position: absolute
+        right: 0
+        
         nav
             a
                 padding: 8px
@@ -30,3 +34,4 @@ header
             font-size: 0.75rem
         i
             color: #ffff
+    
