--- a/_services.sass
+++ b/_services.sass
@@ -14,8 +14,12 @@
         font-style: italic
         font-weight: 400
         margin-bottom: 64px
+    
+        
     .icon
-        margin: 0 145px
+        position: relative
+        right: -35%
+        padding: 10px
         text-align: center
         height: 128px
         width: 128px
@@ -35,4 +39,5 @@
             color: #6c757d
             font-size: 18px
 
-            
+@media ( max-width: 1000px )
+    
