--- a/_contact.sass
+++ b/_contact.sass
@@ -6,6 +6,7 @@
     background-position: center
     background-repeat: no-repeat
     .textbox
+        margin: auto
         h1
             font-size: 40px
             margin-top: 0
@@ -21,18 +22,19 @@
             color: #6c757d
     .msgbox
         background-color: #ffff
-        width: 630px
+        width: 100%
         height: 271px
         border-radius: 5px
     .box
         background-color: #ffff
-        width: 630px
+        width: 100%
         height: 65px
         border-radius: 5px
         margin-bottom: 38px
     .btn
         opacity: 0.8
-        padding: 1.4rem 2.8rem
+        margin-top: 15px
+        padding: 22px 50px
         border-radius: 10px
         background-color: #b28f0e
         h4
@@ -41,5 +43,9 @@
             font-size: 1.175rem
             font-weight: 700
 
+@media ( max-width: 768px )
+    .col-md-6
+        width: 100%
+    
 
     
