--- a/_portfolio.sass
+++ b/_portfolio.sass
@@ -14,13 +14,15 @@
             margin-bottom: 64px
             color: #6c757d
     .imgbox
-        width: 410px
+        // box-sizing: border-box
         img
+            box-sizing: border-box
+            padding-bottom: 0
             height: 300px
     .textbox
         padding-top: 20px
         text-align: center
-        width: 410px
+        width: 100%
         height: 108px
         background-color: #ffff
         margin-bottom: 25px
@@ -32,3 +34,4 @@
             color: #6c757d
             font-style: italic
             font-size: 18px
+// 
