--- a/_services.sass
+++ b/_services.sass
@@ -17,8 +17,7 @@
     
         
     .icon
-        position: relative
-        right: -35%
+        margin: auto
         padding: 10px
         text-align: center
         height: 128px
@@ -29,6 +28,8 @@
             color: #ffff
             font-size: 60px
     .textbox
+        width: 100%
+        margin: auto
         h2
             margin-top: 1rem
             margin-bottom: 1rem
@@ -39,5 +40,7 @@
             color: #6c757d
             font-size: 18px
 
-@media ( max-width: 1000px )
+@media ( min-width: 768px )
+    .textbox
+        width: 200px
       
