--- a/_team.sass
+++ b/_team.sass
@@ -2,7 +2,7 @@
     padding: 96px 0
     background-color: #F8F9FA
     .textbox
-        
+        width: 100%
         h1
             font-size: 40px
             margin-top: 0
@@ -58,3 +58,4 @@
         text-align: center
         margin-top: 40px
 
+    
