--- a/_welcome.sass
+++ b/_welcome.sass
@@ -1,5 +1,5 @@
 #welcome
-    padding: 10rem 0
+    padding: 250px 0
     background-color: #ffff
     background-image: url("assets/header-bg.jpg")
     background-repeat: no-repeat
@@ -10,7 +10,9 @@
     .textbox,.btn
         color: #ffff
     .textbox
-        padding: 100px 0
+        width: 100%
+        text-align: center
+        
         h1
             font-size: 2.25rem
             font-weight: 500
