--- a/_header.sass
+++ b/_header.sass
@@ -23,7 +23,7 @@ header
         display: none
     .menu-button
         display: block
-        padding: 0.75rem
+        padding: 12px 16px
         font-weight: 700
         border: 0.0625rem solid #ffff
         border-radius: 5px
@@ -34,4 +34,5 @@ header
             font-size: 0.75rem
         i
             color: #ffff
+            font-size: 16px
     
