--- a/_services.sass
+++ b/_services.sass
@@ -39,8 +39,10 @@
             line-height: 1.75
             color: #6c757d
             font-size: 18px
+    .box
+        padding: 20px 0
 
 @media ( min-width: 768px )
     .textbox
         width: 200px
-      
+    
