--- a/_about.sass
+++ b/_about.sass
@@ -1,6 +1,8 @@
 #about
     .box
-        .imgbox
+        margin: 0 200px
+        .imgbox 
+            
             border: 8px solid #dfdfe0
             margin: 80px 40px
             width: 150px
@@ -27,6 +29,7 @@
             color: #6c757d
             line-height: 1.75
         .textbox
+           
             margin: 60px 20px 0
             width: 400px
 
