--- a/style.css
+++ b/style.css
@@ -186,6 +186,9 @@ header .navbar nav a {
   font-size: 18px;
 }
 
+#about .box {
+  margin: 0 200px;
+}
 #about .box .imgbox {
   border: 8px solid #dfdfe0;
   margin: 80px 40px;
