--- a/_header.sass
+++ b/_header.sass
@@ -18,14 +18,14 @@ header
                 color: #ffff
                 margin-right: 25px
                 letter-spacing: 0.07rem
-@media (max-width: 950px)
+@media (max-width: 992px)
     .navbar
         display: none
     .menu-button
         display: block
         padding: 12px 16px
         font-weight: 700
-        border: 0.0625rem solid #ffff
+        border: 0.2px solid #8d8d8d
         border-radius: 5px
         h6
             padding-right: 5px
@@ -35,4 +35,12 @@ header
         i
             color: #ffff
             font-size: 16px
+@media (max-width: 400px)
+    .imgbox
+        max-width: 140px
+    .menu-button
+        width: 82px
+        height: 37px
+ 
+
     
