--- a/_portfolio.sass
+++ b/_portfolio.sass
@@ -16,9 +16,9 @@
     .imgbox
         // box-sizing: border-box
         img
-            box-sizing: border-box
+            // box-sizing: border-box
             padding-bottom: 0
-            height: 300px
+            // height: 300px
     .textbox
         padding-top: 20px
         text-align: center
@@ -34,4 +34,19 @@
             color: #6c757d
             font-style: italic
             font-size: 18px
-// 
+@media ( max-width: 1400px )
+    .imgbox
+        width: 100%
+        height: 100%
+@media ( max-width: 1200px )
+    img
+        width: 100%
+        height: 100%
+@media ( max-width: 992px )
+    .imgbox
+        width: 100%
+        height: 100%
+@media ( max-width: 768px )
+    .imgbox
+        width: 100%
+        height: 100%
