--- a/_services.sass
+++ b/_services.sass
@@ -42,7 +42,13 @@
     .box
         padding: 20px 0
 
-@media ( min-width: 768px )
-    .textbox
-        width: 200px
+// @media ( min-width: 768px )
+//     .textbox
+//         width: 200px
+@media ( max-width: 992px )
+    #services
+        padding: 96px 0
+        h4
+            width: 350px
+
     
