--- a/_welcome.sass
+++ b/_welcome.sass
@@ -1,5 +1,5 @@
 #welcome
-    padding: 250px 0
+    padding: 230px 0
     background-color: #ffff
     background-image: url("assets/header-bg.jpg")
     background-repeat: no-repeat
@@ -14,18 +14,38 @@
         text-align: center
         
         h1
-            font-size: 2.25rem
+            font-size: 36px
             font-weight: 500
             font-style: italic
-            line-height: 2.25rem
-            margin-bottom: 2rem
+            line-height: 36px
+            margin-bottom: 32px
         h2
-            font-size: 4.5rem
+            font-size: 72px
             font-weight: 700
-            line-height: 4.5rem
-            margin-bottom: 4rem
+            line-height: 72px
+            margin-bottom: 64px
         .btn
-            font-size: 1.125rem
+            font-size: 18px
             font-weight: 700
-            padding: 1.25rem 2.5rem
+            padding: 20px 40px
             background-color: #ffc800
+@media (max-width: 992px)
+    #welcome
+        padding: 100px 0 
+        .textbox
+          
+            h1
+                margin: 50px 0 15px
+                font-size: 30px
+            h2
+                line-height: 1
+                font-size: 60px
+                margin-bottom: 33px
+        .btn
+            width: 220px
+            
+                
+    
+
+    
+            
