--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header .navbar nav a {
   letter-spacing: 0.07rem;
 }
 
-@media (max-width: 950px) {
+@media (max-width: 992px) {
   .navbar {
     display: none;
   }
@@ -36,7 +36,7 @@ header .navbar nav a {
     display: block;
     padding: 12px 16px;
     font-weight: 700;
-    border: 0.0625rem solid white;
+    border: 0.2px solid #8d8d8d;
     border-radius: 5px;
   }
   .menu-button h6 {
@@ -50,8 +50,17 @@ header .navbar nav a {
     font-size: 16px;
   }
 }
+@media (max-width: 400px) {
+  .imgbox {
+    max-width: 140px;
+  }
+  .menu-button {
+    width: 82px;
+    height: 37px;
+  }
+}
 #welcome {
-  padding: 250px 0;
+  padding: 230px 0;
   background-color: white;
   background-image: url("assets/header-bg.jpg");
   background-repeat: no-repeat;
@@ -68,25 +77,42 @@ header .navbar nav a {
   text-align: center;
 }
 #welcome .textbox h1 {
-  font-size: 2.25rem;
+  font-size: 36px;
   font-weight: 500;
   font-style: italic;
-  line-height: 2.25rem;
-  margin-bottom: 2rem;
+  line-height: 36px;
+  margin-bottom: 32px;
 }
 #welcome .textbox h2 {
-  font-size: 4.5rem;
+  font-size: 72px;
   font-weight: 700;
-  line-height: 4.5rem;
-  margin-bottom: 4rem;
+  line-height: 72px;
+  margin-bottom: 64px;
 }
 #welcome .textbox .btn {
-  font-size: 1.125rem;
+  font-size: 18px;
   font-weight: 700;
-  padding: 1.25rem 2.5rem;
+  padding: 20px 40px;
   background-color: #ffc800;
 }
 
+@media (max-width: 992px) {
+  #welcome {
+    padding: 100px 0;
+  }
+  #welcome .textbox h1 {
+    margin: 50px 0 15px;
+    font-size: 30px;
+  }
+  #welcome .textbox h2 {
+    line-height: 1;
+    font-size: 60px;
+    margin-bottom: 33px;
+  }
+  #welcome .btn {
+    width: 220px;
+  }
+}
 #services {
   padding: 96px 0;
 }
@@ -138,9 +164,12 @@ header .navbar nav a {
   padding: 20px 0;
 }
 
-@media (min-width: 768px) {
-  .textbox {
-    width: 200px;
+@media (max-width: 992px) {
+  #services {
+    padding: 96px 0;
+  }
+  #services h4 {
+    width: 350px;
   }
 }
 #portfolio {
@@ -163,9 +192,7 @@ header .navbar nav a {
   color: #6c757d;
 }
 #portfolio .imgbox img {
-  box-sizing: border-box;
   padding-bottom: 0;
-  height: 300px;
 }
 #portfolio .textbox {
   padding-top: 20px;
@@ -186,6 +213,30 @@ header .navbar nav a {
   font-size: 18px;
 }
 
+@media (max-width: 1400px) {
+  .imgbox {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (max-width: 1200px) {
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (max-width: 992px) {
+  .imgbox {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .imgbox {
+    width: 100%;
+    height: 100%;
+  }
+}
 #about .box .imgbox {
   border: 8px solid #dfdfe0;
   margin: 80px 40px;
