--- a/_about.sass
+++ b/_about.sass
@@ -1,49 +1,111 @@
 #about
-    .box
-        
-        .imgbox 
-            
-            border: 8px solid #dfdfe0
-            margin: 80px 40px
-            width: 150px
-            height: 150px
-            border-radius: 50%
-            overflow: hidden
-
+    padding: 100px 0
+    .text-center
+        margin-bottom: 55px
         h1
+            font-size: 60px
             font-weight: 700
-            font-size: 40px
-            margin-bottom: 16px
-        h2,h4
-            font-size: 24px
-            font-weight: 700
-            line-height: 1.2
+            margin-bottom: 10px
         h3
-            font-size: 18px
-            font-weight: 400
-            font-style: italic
-            color: #6c757d
-            margin-bottom: 64px
-        p
-            font-size: 18px
-            color: #6c757d
-            line-height: 1.75
+            font-size: 20px
+            color: #828080
+    .box
+        display: flex
+        align-items: center
+        margin: 0 0 100px 100px
         .textbox
-           
-            margin: 60px 20px 0
             width: 400px
-
-        .circle
-            border: 8px solid #dfdfe0
-            margin: 60px 0 0 0
+            margin: 0 20px
+            text-align: end
+            h2,h4
+                font-size: 30px
+                font-weight: 700
+                line-height: 1.3
+            p
+                font-size: 19px
+                color: #828080
+                line-height: 1.4
+        .imgbox
+            margin: 0 30px
             width: 150px
             height: 150px
+            overflow: hidden
             border-radius: 50%
-            background-color: #FFC800
-            h6
-                text-align: center
-                width: 60px
-                color: #ffff
+            border: 5px solid #c4c1c1
+    .right
+        justify-content: end
+        margin: 0 100px 100px 0
+        .textbox
+            text-align: start
+    .yellow
+        display: flex
+        justify-content: center
+    .story
+        // 
+        .minibox
+            text-align: center
+            padding: 0 40px
+            h2
                 font-size: 20px
                 font-weight: 700
                 line-height: 1.2
+    @media screen and ( max-width: 992px )
+        .box
+            margin: 0 0 100px 0
+            align-items: flex-start
+            .textbox
+                width: 190px
+
+    @media screen and ( max-width: 768px )
+        .text-center
+            h1
+                font-size: 55px
+            h3
+                font-size: 18px
+        .box
+            align-items: flex-start
+            flex-direction: row-reverse
+            margin: 0 0 70px 0
+            .textbox
+                width: 400px
+                text-align: start
+            .imgbox
+                width: 140px
+                height: auto
+                margin: 0
+        .right
+            margin: 0 0 70px 0
+            flex-direction: row
+            .textbox
+                text-align: start
+        .yellow
+            justify-content: flex-start
+            .story
+                width: 140px
+                height: 140px
+                .minibox
+                    padding: 0 30px
+
+    @media screen and ( max-width: 576px )
+        .text-center
+            h1
+                font-size: 50px
+            h3
+                font-size: 18px
+        .box
+            .imgbox
+                width: 140px
+                height: auto
+            .textbox
+                h2,h4
+                    font-size: 25px
+                p
+                    font-size: 18px
+        .yellow
+            .story
+                width: 100px
+                height: 100px
+                .minibox
+                    padding: 0 15px
+                    h2
+                        font-size: 18px
