--- a/_portfolio.sass
+++ b/_portfolio.sass
@@ -1,52 +1,56 @@
 #portfolio
-    padding: 96px 0
-    background-color: #F8F9FA
-    .box
+    background-color: #acadaf16
+    .textbox
+        padding-top: 40px
         text-align: center
         h1
-            font-size: 40px
-            margin-top: 0
-            margin-bottom: 16px
-            font-weight: 700
-        h4
-            font-size: 16px
-            font-style: italic
-            margin-bottom: 64px
-            color: #6c757d
-    .imgbox
-        // box-sizing: border-box
-        img
-            // box-sizing: border-box
-            padding-bottom: 0
-            // height: 300px
-    .textbox
-        padding-top: 20px
-        text-align: center
-        width: 100%
-        height: 108px
-        background-color: #ffff
-        margin-bottom: 25px
+            // 
+        h3
+            // 
         h2
+            font-size: 29px
             font-weight: 700
-            font-size: 24px
-        h5
-            padding-top: 10px
-            color: #6c757d
-            font-style: italic
-            font-size: 18px
-@media ( max-width: 1400px )
-    .imgbox
-        width: 100%
-        height: 100%
-@media ( max-width: 1200px )
-    img
-        width: 100%
-        height: 100%
-@media ( max-width: 992px )
-    .imgbox
-        width: 100%
-        height: 100%
-@media ( max-width: 768px )
-    .imgbox
-        width: 100%
-        height: 100%
+            line-height: 1.2
+            margin-top: 13px
+        h4
+            font-size: 20px
+            color: #838489
+    .box
+        margin-bottom: 30px
+        background-color: #ffff
+        padding-bottom: 20px
+        .textbox
+            padding: 0
+        .imgbox
+            position: relative
+            .icon
+                width: 100%
+                display: flex
+                justify-content: center
+                align-items: center
+                font-size: 60px
+                color: #ffff
+                position: absolute
+                top: 0
+                bottom: 0
+                opacity: 0
+                &:hover
+                    background-color: #ffbb00
+                    opacity: 0.9
+                    transition: 0.5s
+                    cursor: pointer
+    @media screen and ( max-width: 992px )
+        .box
+            .imgbox
+                width: auto
+    @media screen and ( max-width: 576px )
+        .textbox
+            h1
+                font-size: 40px
+            h3
+                font-size: 18px
+                margin-bottom: 35px
+        .box
+            margin-bottom: 50px
+            .imgbox
+                width: auto
