--- a/_footer.sass
+++ b/_footer.sass
@@ -1,35 +1,35 @@
 footer
-
-    padding: 15px 0
-    .footer-content
-        
-        .icon-circle
-            margin: 0 10px
-            background-color: #000
-            border-radius: 50%
-            width: 40px
-            height: 40px
-            text-align: center
+    padding: 22px 0
+    .menu
+        a
+            color: #535151
+            font-size: 18px
+        span
+            margin: 0 20px
+        ul
             display: flex
-            align-items: center
             justify-content: center
-        .icon
+            li
+                .icon
+                    font-size: 17px
+                    width: 40px
+                    height: 40px
+                    display: flex
+                    justify-content: center
+                    align-items: center
+                    cursor: pointer
+                    background-color: #1a1919
+                    color: #ffff
+                    margin: 0 12px
+                    border-radius: 30px
+                    &:hover
+                        background-color: #424649
+                        transition: 0.5s
+    @media screen and ( max-width: 768px )
+        .menu
             display: flex
-            flex-flow: row nowrap
-            i
-                color: #ffff
-                font-size: 15px
-        .textb,.textbox
-            margin: 15px 0
-
-        h1,h2,h3
-            color: #212529
-            margin-right: 8px
-            font-size: 0.9rem
-@media (max-width: 768px)
-    .footer-content
-        display: flex
-        flex-direction: column
-        align-items: center
-        text-align: center
-
+            flex-direction: column
+            ul
+                margin: 15px 0
+            
+        
