--- a/_header.sass
+++ b/_header.sass
@@ -1,46 +1,64 @@
 header
-    background-color: #212529
-    padding: 18px 0
-    position: fixed
-    top: 0
-    width: 100%
-    .imgbox
-        width: 140px
-
-    .navbar
-        position: absolute
+    .menu
+        display: flex
+        justify-content: space-between
+        align-items: center
+        padding: 10px 0
+        height: 70px
+        background-color: #212529 
+        position: fixed
         right: 0
-        
+        left: 0
+        z-index: 1
+        .imgbox
+            width: 140px
+            margin-left: 120px
+        .btn
+            color: #ffff
+            display: flex
+            align-items: center
+            display: none
+            border: 1px solid #ffffffa5
+            padding: 2px
+            opacity: 0.6
+            h5
+                cursor: pointer
+                font-weight: 700
+                font-size: 17px
+            .icon
+                margin-left: 7px
+                cursor: pointer
         nav
+            margin-right: 120px
             a
-                padding: 8px
-                font-size: 1rem
-                color: #ffff
-                margin-right: 25px
-                letter-spacing: 0.07rem
-@media (max-width: 992px)
-    .navbar
-        display: none
-    .menu-button
-        display: block
-        padding: 12px 16px
-        font-weight: 700
-        border: 0.2px solid #8d8d8d
-        border-radius: 5px
-        h6
-            padding-right: 5px
-            color: #ffff
-            opacity: 0.65
-            font-size: 0.75rem
-        i
-            color: #ffff
-            font-size: 16px
-@media (max-width: 400px)
-    .imgbox
-        max-width: 140px
-    .menu-button
-        width: 82px
-        height: 37px
- 
-
+                font-size: 19px
+                margin: 0 20px
+                cursor: pointer
+                &:hover
+                    color: #ffcb11
+    @media screen and ( max-width: 576px )
+        .menu
+            height: 70px
+            .btn
+                margin-right: 10px
+                padding:  6px 10px
+            .imgbox
+                margin-left: 20px
+    @media screen and ( max-width: 768px )
+        .menu
+            nav
+                display: none
+            .btn
+                display: flex
+                margin-right: 30px
+            .imgbox
+                margin-left: 20px
+    @media screen and ( max-width: 992px )
+        .menu
+            nav
+                margin-right: 55px
+                a
+                    margin: 0 10px
+            .imgbox
+                margin-left: 40px
     
