--- a/_portfolio.sass
+++ b/_portfolio.sass
@@ -1,12 +1,16 @@
 #portfolio
+    padding: 96px 0
     background-color: #acadaf16
     .textbox
-        padding-top: 40px
+        margin-bottom: 64px
         text-align: center
         h1
-            // 
+            font-size: 40px
+            font-weight: 700
+            margin-bottom: 15px
         h3
-            // 
+            font-size: 20px
+            color: #828080
         h2
             font-size: 29px
             font-weight: 700
