--- a/_portfolio.sass
+++ b/_portfolio.sass
@@ -2,7 +2,7 @@
     padding: 96px 0
     background-color: #acadaf16
     .textbox
-        margin-bottom: 64px
+        // margin-bottom: 64px
         text-align: center
         h1
             font-size: 40px
@@ -24,7 +24,7 @@
         background-color: #ffff
         padding-bottom: 20px
         .textbox
-            padding: 0
+            padding: 30px 24px
         .imgbox
             position: relative
             .icon
