--- a/style.css
+++ b/style.css
@@ -248,7 +248,7 @@ header .menu nav a:hover {
   padding-bottom: 20px;
 }
 #portfolio .box .textbox {
-  padding: 30px 24px;
+  padding: 24px;
 }
 #portfolio .box .imgbox {
   position: relative;
