--- a/_header.sass
+++ b/_header.sass
@@ -21,6 +21,7 @@ header
             border: 1px solid #ffffffa5
             padding: 2px
             opacity: 0.6
+        
             h5
                 cursor: pointer
                 font-weight: 700
@@ -43,7 +44,8 @@ header
                 margin-right: 10px
                 padding:  6px 10px
             .imgbox
-                margin-left: 20px
+                position: relative
+                left: 0
     @media screen and ( max-width: 768px )
         .menu
             nav
@@ -52,13 +54,12 @@ header
                 display: flex
                 margin-right: 30px
             .imgbox
-                margin-left: 20px
+                margin-left: 14px
+    
     @media screen and ( max-width: 992px )
         .menu
             nav
                 margin-right: 55px
                 a
                     margin: 0 10px
-            .imgbox
-                margin-left: 40px
-    
+           
