--- a/_contact.sass
+++ b/_contact.sass
@@ -1,5 +1,5 @@
 #contact
-    padding: 96px 0
+    padding: 80px 0
     background-color: #212529
     background-image: url('assets/map-image.png')
     background-size: cover
@@ -20,32 +20,51 @@
             font-style: italic
             margin-bottom: 64px
             color: #6c757d
+    input
+            opacity: 0.4
+            padding: 15px 15px
+            font-size: 20px
+            font-weight: 700
+        
     .msgbox
+        
         background-color: #ffff
         width: 100%
-        height: 271px
+        height: 285px
         border-radius: 5px
     .box
         background-color: #ffff
         width: 100%
-        height: 65px
+        height: 70px
         border-radius: 5px
         margin-bottom: 38px
     .btn
-        opacity: 0.8
+        display: flex
+        align-items: center
+        justify-content: center
         margin-top: 15px
-        padding: 22px 50px
+        height: 70px
+        width: 240px
+        
         border-radius: 10px
-        background-color: #b28f0e
+        background-color: #B28F0E
         h4
-            line-height: 1.4
-            color: #ffff
+            line-height: 2
+            color: #c3c3c3
             font-size: 1.175rem
             font-weight: 700
+    @media screen and (max-width: 576px)
 
-@media ( max-width: 768px )
-    .col-md-6
-        width: 100%
-    
+        .msgbox
+            height: 200px
+            margin-bottom: 20px
+        .btn
+            margin-top: 25px
+            
+        .box
+            margin-bottom: 25px
+        input
+            padding: 20px
+
 
     
