--- a/style.css
+++ b/style.css
@@ -60,7 +60,8 @@ header .menu nav a:hover {
     padding: 6px 10px;
   }
   header .menu .imgbox {
-    margin-left: 20px;
+    position: relative;
+    left: 0;
   }
 }
 @media screen and (max-width: 768px) {
@@ -72,7 +73,7 @@ header .menu nav a:hover {
     margin-right: 30px;
   }
   header .menu .imgbox {
-    margin-left: 20px;
+    margin-left: 14px;
   }
 }
 @media screen and (max-width: 992px) {
@@ -81,9 +82,6 @@ header .menu nav a:hover {
   }
   header .menu nav a {
     margin: 0 10px;
-  }
-  header .menu .imgbox {
-    margin-left: 40px;
   }
 }
 
@@ -539,7 +537,7 @@ header .menu nav a:hover {
 }
 
 #contact {
-  padding: 96px 0;
+  padding: 80px 0;
   background-color: #212529;
   background-image: url("assets/map-image.png");
   background-size: cover;
@@ -564,38 +562,57 @@ header .menu nav a:hover {
   margin-bottom: 64px;
   color: #6c757d;
 }
+#contact input {
+  opacity: 0.4;
+  padding: 15px 15px;
+  font-size: 20px;
+  font-weight: 700;
+}
 #contact .msgbox {
   background-color: white;
   width: 100%;
-  height: 271px;
+  height: 285px;
   border-radius: 5px;
 }
 #contact .box {
   background-color: white;
   width: 100%;
-  height: 65px;
+  height: 70px;
   border-radius: 5px;
   margin-bottom: 38px;
 }
 #contact .btn {
-  opacity: 0.8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-top: 15px;
-  padding: 22px 50px;
+  height: 70px;
+  width: 240px;
   border-radius: 10px;
-  background-color: #b28f0e;
+  background-color: #B28F0E;
 }
 #contact .btn h4 {
-  line-height: 1.4;
-  color: white;
+  line-height: 2;
+  color: #c3c3c3;
   font-size: 1.175rem;
   font-weight: 700;
 }
-
-@media (max-width: 768px) {
-  .col-md-6 {
-    width: 100%;
+@media screen and (max-width: 576px) {
+  #contact .msgbox {
+    height: 200px;
+    margin-bottom: 20px;
+  }
+  #contact .btn {
+    margin-top: 25px;
+  }
+  #contact .box {
+    margin-bottom: 25px;
+  }
+  #contact input {
+    padding: 20px;
   }
 }
+
 footer {
   padding: 22px 0;
 }
