--- a/_header.sass
+++ b/_header.sass
@@ -1,4 +1,5 @@
 header
+    
     .menu
         display: flex
         justify-content: space-between
@@ -43,18 +44,20 @@ header
             .btn
                 margin-right: 10px
                 padding:  6px 10px
-            .imgbox
-                position: relative
-                left: 0
-    @media screen and ( max-width: 768px )
+        .imgbox
+                // display: flex
+                // justify-content: start
+            margin-left: 10px
+    @media screen ( min-width: 577px ) and ( max-width: 768px )
         .menu
             nav
                 display: none
             .btn
                 display: flex
-                margin-right: 30px
+                justify-content: end
+                
             .imgbox
-                margin-left: 14px
+                margin-left: 17px
     
     @media screen and ( max-width: 992px )
         .menu
@@ -62,4 +65,4 @@ header
                 margin-right: 55px
                 a
                     margin: 0 10px
-           
+            
